--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,14 +1,23 @@
-h1  {
+<style type="text/css">
+    h1  {
        text-align: center;
        font-size: 12pt;
        color: #000099;
        margin-bottom: 5px;
        text-decoration: underline;
+     
     }
     
     table {
        margin: 5px;
        width: 290px;
+      border-color: black;
+      border-width: 5px;
+      border-style: solid;
+      text-align: center;
+      position: relative;
+      left: 315px
+      
     }
     
     th {
@@ -29,4 +38,19 @@ h1  {
     
     .centerCell {
        text-align: center;
-    }
+  }
+    .baseball {
+   position: relative;
+   top: 350px;
+   left: 318px;
+  }
+  body {
+    background-color: green
+  }
+  
+  h2 {
+    position: relative;
+      top: 190px;
+    left: 300px;
+  }
+ </style>
